--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token":"process.env.token",
+"token":"NTU3NjQ4OTM3MTg0Mzk1Mjcw.XJFFCw.vcUSVJdZZ3G1VsM4VU5NEsh2HT8",
 "prefix":"--",
 "IdOwner":"557648937184395270"           
 }
